Edit icon images

--- a/contact.html
+++ b/contact.html
@@ -32,11 +32,11 @@
 <img src="IMAGES/contact.jpg" alt="Customer Contact" width="60%" style="margin-left :6rem; border-radius: 15px;" >
 <p style="font-size: 2rem;font-weight: bold;">Contact us through the following:</p>
         
-<br>  <img style="vertical-align: middle;" src="images/phone.jpg" alt="phone" width="30px"height="30px" >
+<br>  <img style="vertical-align: middle;" src="IMAGES/phone.jpg" alt="phone" width="30px"height="30px" >
   <span style="vertical-align:middle; font-weight: bolder;font-size: x-large;">: +254 758 299 089</span><br>
- <br> <img style="vertical-align: middle;" src="images/email.jpg" alt="email" width="30px"height="30px" >
+ <br> <img style="vertical-align: middle;" src="IMAGES/email.jpg" alt="email" width="30px"height="30px" >
   <span style="vertical-align:middle; font-weight: bolder;font-size: x-large;">: ghalibmohammad92@gmail.com</span><br>
-<br>  <img style="vertical-align: middle;" src="images/whatasapp.jpg" alt="whatasapp" width="30px"height="30px" >
+<br>  <img style="vertical-align: middle;" src="IMAGES/whatasapp.jpg" alt="whatasapp" width="30px"height="30px" >
   <span style="vertical-align:middle; font-weight: bolder;font-size: x-large;">: 075 829 9089</span><br>
   
 <p>Or you can click the button below to send us an email directly:</p>
@@ -46,25 +46,25 @@
 <div class="social-icon">
 <p style="text-align: right; font-size: 1rem;">Follow for more:</p><br>
 <a href="https://www.facebook.com/AlphaMohaa?mibextid=ZbWKwL">
-  <img src="images/facebook icon.jpg" alt="Facebook Icon" width="30" height="30">
+  <img src="IMAGES/facebook icon.jpg" alt="Facebook Icon" width="30" height="30">
 
 <a href="https://www.instagram.com/alpha_mohaa?igsh=MXYwcWF2OWZodTF5bg==">
-<img src="images/instagram.jpg" alt="instagram" width="30" height="30">
+<img src="IMAGES/instagram.jpg" alt="instagram" width="30" height="30">
 </a>
 
 
 <a href="https://youtube.com/@MohammadGhalib-rn9kh?si=c_32O5hUWAmQMyEY">
-<img src="images/youtube.jpg" alt="youtube"width="30" height="30">
+<img src="IMAGES/youtube.jpg" alt="youtube"width="30" height="30">
 
 
 </a>
 <a href="https://www.tiktok.com/@alphamohaa?_t=8kuitWMC78w&_r=1">
-<img src="images/tiktok.jpg" alt="tiktok"width="30" height="30">
+<img src="IMAGES/tiktok.jpg" alt="tiktok"width="30" height="30">
 
 
 </a>
 <a href="https://github.com/Ghalib92">
-<img src="images/github.jpg" alt="github"width="30" height="30">
+<img src="IMAGES/github.jpg" alt="github"width="30" height="30">
 
 </a>
 </div>
