--- a/About.html
+++ b/About.html
@@ -31,7 +31,7 @@
 
 <ul>
      
-    <img src="IMAGES/out.png" alt="Trainer" width="60%" style="float: right;">
+    <img src="IMAGES/out.png" alt="Trainer" width="80%" height="100%">
   
     <li>
         <h3>State-of-the-Art Facilities</h3>
