--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 </nav>
 <p>Ready to take the first step towards a healthier, stronger you? Reach out to us today! Whether you have questions about our membership options, want to schedule a tour of our facilities, or simply need some fitness advice, our friendly team is here to help. Don't hesitate to get in touch and let's start your fitness journey together!</p>
 <img src="IMAGES/contact.jpg" alt="Customer Contact" width="80%" height="100%" style="border-radius: 15px;" >
-<p style="font-size: 2rem;font-weight: bold;">Contact us through the following:</p>
+<p style="font-size: 1.5rem;font-weight: bold;text-align: center;">Contact us through the following:</p>
         
 <br>  <img style="vertical-align: middle;" src="IMAGES/phone.jpg" alt="phone" width="30px"height="30px" >
   <span style="vertical-align:middle; font-weight: bolder;font-size: x-large;">: +254 758 299 089</span><br>
