--- a/contact.html
+++ b/contact.html
@@ -33,11 +33,11 @@
 <p style="font-size: 1.5rem;font-weight: bold;text-align: center;">Contact us through the following:</p>
         
 <br>  <img style="vertical-align: middle;" src="IMAGES/phone.jpg" alt="phone" width="20px"height="20px" >
-  <span style="vertical-align:middle; font-weight: bolder;font-size: x-large;">: +254 758 299 089</span><br>
+  <span style="vertical-align:middle;">: +254 758 299 089</span><br>
  <br> <img style="vertical-align: middle;" src="IMAGES/email.jpg" alt="email" width="20px"height="20px" >
-  <span style="vertical-align:middle; font-weight: bolder;font-size: x-large;">:ghalibmohammad92@gmail.com</span><br>
+  <span style="vertical-align:middle;">:flexforge001@gmail.com</span><br>
 <br>  <img style="vertical-align: middle;" src="IMAGES/whatasapp.jpg" alt="whatasapp" width="30px"height="30px" >
-  <span style="vertical-align:middle; font-weight: bolder;font-size: x-large;">: 075 829 9089</span><br>
+  <span style="vertical-align:middle;">: 075 829 9089</span><br>
   
 <p>Or you can click the button below to send us an email directly:</p>
 <br> <a href="mailto:ghalibmohammad92@gmail.com"><button type="button" class="btn btn-primary">Send Email</button></a>
