--- a/About.html
+++ b/About.html
@@ -111,7 +111,7 @@
 <p>At FlexForge Gym, we're committed to providing you with a comprehensive fitness experience that goes beyond just working out. From our state-of-the-art facilities and expert personal training to our diverse group fitness classes and supportive community, we're here to help you achieve your goals every step of the way. With flexible memberships, specialized programs, and a range of additional services, we strive to cater to your individual needs and make your fitness journey as enjoyable and rewarding as possible. Join us today and let's embark on this transformative journey together!</p>
 
 <footer>
-<p>&copy; 2024 FlexForge Gym. All rights reserved.</p>
+<p>&copy; 2024 FlexForge. All rights reserved.</p>
 </footer>
 
 </body>
