--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
 </a>
 </div>
 <footer>
-    <p>&copy; 2024 FlexForge Gym. All rights reserved.</p>
+    <p>&copy; 2024 FlexForge. All rights reserved.</p>
     </footer>
 </body>
 </html>
